--- a/MyFantasyWebsite/index.html
+++ b/MyFantasyWebsite/index.html
@@ -99,6 +99,7 @@
         <header class="text-center mb-8">
             <h1 class="text-4xl md:text-5xl font-bold text-slate-900">2025 Fantasy Football AI Dashboard</h1>
             <p class="text-slate-600 mt-2 text-lg">Your interactive guide to dominating your Superflex & IDP league.</p>
+            <p2 class="text-slate-600 mt-2 textlg">Built by yours truly: Kai Holland</p2>
         </header>
 
         <nav class="flex justify-center mb-8 bg-slate-200 rounded-lg p-2 shadow-inner">
