--- a/MyFantasyWebsite/index.html
+++ b/MyFantasyWebsite/index.html
@@ -148,6 +148,18 @@
             color: #fef3c7 !important;
             border-color: #d97706 !important;
         }
+        
+        /* Fix reset button in dark mode */
+        .dark .bg-slate-300 {
+            background-color: #64748b !important;
+            color: #f8fafc !important;
+        }
+        .dark .text-slate-700 {
+            color: #f8fafc !important;
+        }
+        .dark button:hover.bg-slate-300 {
+            background-color: #475569 !important;
+        }
         .spinner {
             border: 4px solid rgba(0, 0, 0, 0.1);
             width: 36px;
