--- a/MyFantasyWebsite/index.html
+++ b/MyFantasyWebsite/index.html
@@ -160,6 +160,14 @@
         .dark button:hover.bg-slate-300 {
             background-color: #475569 !important;
         }
+        
+        /* Fix table hover in dark mode */
+        .dark tr:hover {
+            background-color: #475569 !important;
+        }
+        .dark tr.hover\:bg-slate-50:hover {
+            background-color: #475569 !important;
+        }
         .spinner {
             border: 4px solid rgba(0, 0, 0, 0.1);
             width: 36px;
